@@ -1,0 +1,41 @@
+DomainKey-Signature: a=rsa-sha1; c=simple; d=messiah.edu; h=date:from:to:
+	subject:sender:message-id:mime-version:content-type; q=dns; s=
+	test1; b=LtVZqGbwYWMXJVIEDEMJGKY6CxYOGPxlNVskEWTdOENGSjfuCe+sqrp
+	e4K4pq6gh0J35O3qZZXrNC21g/gezyg==
+Received: from ug-out-1314.google.com (ug-out-1314.google.com [66.249.92.174])
+	by mx2.messiah.edu (Postfix) with ESMTP id 79F442ADB4D
+	for <test@dktest.jason.long.name>; Tue, 10 Oct 2006 15:27:14 -0400 (EDT)
+Received: by ug-out-1314.google.com with SMTP id 29so952130ugc
+        for <test@dktest.jason.long.name>; Tue, 10 Oct 2006 12:27:13 -0700 (PDT)
+DomainKey-Signature: a=rsa-sha1; q=dns; c=nofws;
+        s=beta; d=gmail.com;
+        h=foobar:received:message-id:date:from:to:barnone:subject:mime-version:content-type;
+        b=JOYJLw6miPAjUXx+gIQm3NsWuFInq05TuJppyoxqTopYPe3bSKzRBPLw5X+OMO36re/FDEfZnOjJ4cNYvVPuld6JEikNjk2RK98unQvcdkgBPZODuE7g/vXgLZo005nQkwvfd+4dbpHiINsOTT/0ASxQ+65OcgBu0CRR/DO7z/M=
+Received: by 10.66.240.12 with SMTP id n12mr8614290ugh;
+        Tue, 10 Oct 2006 12:27:12 -0700 (PDT)
+Received: by 10.67.96.17 with HTTP; Tue, 10 Oct 2006 12:27:12 -0700 (PDT)
+Date: Tue, 10 Oct 2006 15:27:12 -0400
+From: "Jason Long" <jasonalonzolong@gmail.com>
+To: jlong@messiah.edu
+Subject: Test from gmail
+Sender: "George" <george@messiah.edu>
+Message-ID: <d09d84a70610101227y1f955d37g6f1fdc5d8ac64271@mail.gmail.com>
+MIME-Version: 1.0
+Content-Type: multipart/alternative; 
+	boundary="----=_Part_20675_4029655.1160508432731"
+
+------=_Part_20675_4029655.1160508432731
+Content-Type: text/plain; charset=ISO-8859-1; format=flowed
+Content-Transfer-Encoding: 7bit
+Content-Disposition: inline
+
+This message sent from Gmail.
+
+------=_Part_20675_4029655.1160508432731
+Content-Type: text/html; charset=ISO-8859-1
+Content-Transfer-Encoding: 7bit
+Content-Disposition: inline
+
+This message sent from Gmail.<br>
+
+------=_Part_20675_4029655.1160508432731--
